# server-manager

./: .env  Makefile  Pipfile  README.md  pyproject.toml  start_dev.sh
api/: README.md  main.py
api/models/: __init__.py  api_models.py  share_models.py  user_models.py
api/routers/: __init__.py  basic_routes.py  config_routes.py  share_routes.py  user_routes.py
config/: samba_config.py
frontend/pages/home/: README.md  config.js  index.html  main.js  style.css  test.html
frontend/pages/login/: index.html  main.js  style.css
frontend/pages/samba/: index.html
services/: __init__.py  command_service.py  example.py  file_service.py  readme.md  samba_service.py  standard_commands.py  test_commands.py
tests/: test_samba_service.py
